--- a/src/assets/locales/ru.xlf
+++ b/src/assets/locales/ru.xlf
@@ -49,6 +49,54 @@
           <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="2979689092320439093" datatype="html">
+        <source>Clear input</source>
+        <target>Очистите поле ввода</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/input/input.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5866413865167768633" datatype="html">
+        <source>Password visibility</source>
+        <target>Видимость пароля</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/input/input.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7785679899744532927" datatype="html">
+        <source>Please enter a valid</source>
+        <target>Пожалуйста, введите действительный</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/input/input.component.ts</context>
+          <context context-type="linenumber">41</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6608576580294436927" datatype="html">
+        <source>is required</source>
+        <target>является обезательным</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/input/input.component.ts</context>
+          <context context-type="linenumber">42</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4768749765465246664" datatype="html">
+        <source>Email</source>
+        <target>Емайл</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
+          <context context-type="linenumber">36</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1431416938026210429" datatype="html">
+        <source>Password</source>
+        <target>Пароль</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/login/login.component.ts</context>
+          <context context-type="linenumber">41</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
