--- a/src/assets/locales/ru.xlf
+++ b/src/assets/locales/ru.xlf
@@ -11,7 +11,7 @@
       </trans-unit>
       <trans-unit id="5674286808255988565" datatype="html">
         <source>Create</source>
-        <target>Зоздать</target>
+        <target>Создать</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/drawer/drawer.component.ts</context>
           <context context-type="linenumber">36</context>
